# qq-group-bot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
qqgroupbot/: command.py  core.py
qqgroupbot/aichat/: gemini.py
qqgroupbot/apis/: reply_group_message.py
ys/: characters.json  download_data.py
