[project]
name = "qq-paimeng"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "aber", email = "me@abersheeran.com"},
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.2",
    "loguru>=0.7.2",
    "motor>=3.3.2",
]
requires-python = ">=3.12.0"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
package-type = "application"
